feat: add docs pages

--- a/packages/docs/docs/tutorial/lazy.mdx
+++ b/packages/docs/docs/tutorial/lazy.mdx
@@ -2,4 +2,8 @@
 sidebar_position: 3
 ---
 
+import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
+
 # Lazy
+
+<CarouselDemo lazy />
