--- a/packages/docs/docs/tutorial/slidesVisible.mdx
+++ b/packages/docs/docs/tutorial/slidesVisible.mdx
@@ -1,6 +1,6 @@
 import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 
-# Basic
+# Slides visible
 
-<CarouselDemo />
+<CarouselDemo slidesVisible={2} />
 
