--- a/packages/docs/docs/tutorial/step.mdx
+++ b/packages/docs/docs/tutorial/step.mdx
@@ -1,6 +1,6 @@
 import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 
-# Basic
+# Step
 
-<CarouselDemo />
+<CarouselDemo step={2} />
 
