--- a/packages/docs/docs/tutorial/threshold.mdx
+++ b/packages/docs/docs/tutorial/threshold.mdx
@@ -1,6 +1,6 @@
 import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 
-# Basic
+# Threshold
 
-<CarouselDemo />
+<CarouselDemo  />
 
