--- a/packages/docs/docs/tutorial/autoplay.mdx
+++ b/packages/docs/docs/tutorial/autoplay.mdx
@@ -1,6 +1,6 @@
 import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 
-# Basic
+# Autoplay
 
-<CarouselDemo />
+<CarouselDemo autoPlay />
 
