--- a/packages/docs/docs/tutorial/infinite.mdx
+++ b/packages/docs/docs/tutorial/infinite.mdx
@@ -1,6 +1,6 @@
 import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 
-# Basic
+# Infinity
 
-<CarouselDemo />
+<CarouselDemo infinite />
 
