--- a/packages/docs/docs/tutorial/lazy.mdx
+++ b/packages/docs/docs/tutorial/lazy.mdx
@@ -1,9 +1,30 @@
----
-sidebar_position: 3
----
+
 
 import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 
 # Lazy
 
 <CarouselDemo lazy />
+
+
+```tsx
+<CarouselProvider total={5} lazy>
+  <Carousel>
+    <Slide index={0}>
+      <img src="/imgs/img1.jpg" />
+    </Slide>
+    <Slide index={1}>
+      <img src="/imgs/img2.jpg" />
+    </Slide>
+    <Slide index={2}>
+      <img src="/imgs/img3.jpg" />
+    </Slide>
+    <Slide index={3}>
+      <img src="/imgs/img4.jpg" />
+    </Slide>
+    <Slide index={4}>
+      <img src="/imgs/img5.jpg" />
+    </Slide>
+  </Carousel>
+</CarouselProvider>
+```
