--- a/packages/docs/docs/tutorial/basic.mdx
+++ b/packages/docs/docs/tutorial/basic.mdx
@@ -4,3 +4,24 @@ import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 
 <CarouselDemo />
 
+```tsx
+<CarouselProvider total={5}>
+  <Carousel>
+    <Slide index={0}>
+      <img src="/imgs/img1.jpg" />
+    </Slide>
+    <Slide index={1}>
+      <img src="/imgs/img2.jpg" />
+    </Slide>
+    <Slide index={2}>
+      <img src="/imgs/img3.jpg" />
+    </Slide>
+    <Slide index={3}>
+      <img src="/imgs/img4.jpg" />
+    </Slide>
+    <Slide index={4}>
+      <img src="/imgs/img5.jpg" />
+    </Slide>
+  </Carousel>
+</CarouselProvider>
+```
