--- a/packages/docs/docs/tutorial/threshold.mdx
+++ b/packages/docs/docs/tutorial/threshold.mdx
@@ -6,7 +6,11 @@ import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 
 
 ```tsx
-<CarouselProvider total={5} threshold={0.75}>
+<CarouselProvider 
+  total={5}
+  threshold={0.75}
+  slideHeight={400}
+>
   <Carousel>
     <Slide index={0}>
       <img src="/imgs/img1.jpg" />
