--- a/packages/docs/docs/tutorial/infinite.mdx
+++ b/packages/docs/docs/tutorial/infinite.mdx
@@ -7,7 +7,11 @@ import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 
 
 ```tsx
-<CarouselProvider total={5} infinite>
+<CarouselProvider 
+  total={5}
+  slideHeight={400}
+  infinite
+>
   <Carousel>
     <Slide index={0}>
       <img src="/imgs/img1.jpg" />
