fix: prettier issues

--- a/packages/docs/docs/tutorial/buttons.mdx
+++ b/packages/docs/docs/tutorial/buttons.mdx
@@ -5,10 +5,7 @@ import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 <CarouselDemo showButtons />
 
 ```tsx
-<CarouselProvider 
-  total={5}
-  slideHeight={400}
->
+<CarouselProvider total={5} slideHeight={400}>
   <Carousel>
     <Slide index={0}>
       <img src="/imgs/img1.jpg" />
