--- a/packages/docs/docs/tutorial/slidesVisible.mdx
+++ b/packages/docs/docs/tutorial/slidesVisible.mdx
@@ -5,11 +5,7 @@ import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 <CarouselDemo slidesVisible={2} />
 
 ```tsx
-<CarouselProvider 
-  total={5}
-  slideHeight={400}
-  slidesVisible={2}
->
+<CarouselProvider total={5} slideHeight={400} slidesVisible={2}>
   <Carousel>
     <Slide index={0}>
       <img src="/imgs/img1.jpg" />
