--- a/packages/docs/docs/tutorial/infinite.mdx
+++ b/packages/docs/docs/tutorial/infinite.mdx
@@ -4,14 +4,8 @@ import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 
 <CarouselDemo infinite />
 
-
-
 ```tsx
-<CarouselProvider 
-  total={5}
-  slideHeight={400}
-  infinite
->
+<CarouselProvider total={5} slideHeight={400} infinite>
   <Carousel>
     <Slide index={0}>
       <img src="/imgs/img1.jpg" />
