--- a/packages/docs/docs/tutorial/lazy.mdx
+++ b/packages/docs/docs/tutorial/lazy.mdx
@@ -1,18 +1,11 @@
-
-
 import { CarouselDemo } from '@site/src/components/CarouselDemo/CarouselDemo';
 
 # Lazy
 
 <CarouselDemo lazy />
 
-
 ```tsx
-<CarouselProvider 
-  total={5}
-  slideHeight={400}
-  lazy
->
+<CarouselProvider total={5} slideHeight={400} lazy>
   <Carousel>
     <Slide index={0}>
       <img src="/imgs/img1.jpg" />
